# colin_itt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  colintrace.cpp  colintrace.h  colintraceOLD.cpp  colintracedebug.cpp  itt_mini_collector.h  merge_json.py  minibench.cpp
.github/workflows/: colin_itt-actions.yml
Required Files/: unicontrol.h  unievent.h  utils.h
colintrace/: #CMakeLists.txt#  .#colintrace.cpp  CMakeLists.txt  Makefile  cmake_install.cmake  colintrace.cpp  colintrace.h  temp
minibench/: CMakeFiles.txt  CMakeLists.txt  compare_trace.json  minibench.cpp
